updated spinner in index dashboard template

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -88,12 +88,17 @@
           <div class="bg-gray-200 card z-index-2 ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
-                <div id="chartSurveyCountEmpty" class="mb-0 ">
                   <div class="chart">
+                    <div id="chartSurveyCountLoading" class="d-flex justify-content-center">
+                      <button class="btn btn-primary" type="button" disabled>
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        Chart Loading...
+                      </button>
+                    </div>
+                    <h6 id="chartSurveyCountEmpty" class="mb-4 mt-4 text-center"></h6>
                     <canvas id="chartSurveyCount" data-url="{% url 'chart_surveycount' %}" class="chart-canvas" height="250"></canvas>
                   </div>
                 </div>
-              </div>
             </div>
             <div class="card-body">
               <h6 class="mb-0 "> Monthly Surveys </h6>
@@ -106,10 +111,15 @@
           <div class="bg-gray-200 card z-index-2  ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
-                <div id="chartSurveySystemCountEmpty" class="mb-0 ">
-                  <div class="chart">
-                    <canvas id="chartSurveySystemCount" data-url="{% url 'chart_surveysystemcount' %}" class="chart-canvas" height="250"></canvas>
+                <div class="chart">
+                  <div id="chartSurveySystemCountLoading" class="d-flex justify-content-center">
+                    <button class="btn btn-primary" type="button" disabled>
+                      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                      Chart Loading...
+                    </button>
                   </div>
+                  <h6 id="chartSurveySystemCountEmpty" class="mb-4 mt-4 text-center"></h6>
+                  <canvas id="chartSurveySystemCount" data-url="{% url 'chart_surveysystemcount' %}" class="chart-canvas" height="250"></canvas>
                 </div>
               </div>
             </div>
@@ -126,11 +136,16 @@
           <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
-                <div id="chartSurveySiteCountEmpty" class="mb-0 ">
                   <div class="chart">
+                    <div id="chartSurveySiteCountLoading" class="d-flex justify-content-center">
+                      <button class="btn btn-primary" type="button" disabled>
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        Chart Loading...
+                      </button>
+                    </div>
+                    <h6 id="chartSurveySiteCountEmpty" class="mb-4 mt-4 text-center"></h6>
                     <canvas id="chartSurveySiteCount" data-url="{%url 'chart_surveysitecount' %}" class="chart-canvas" height="250"></canvas>
                   </div>
-                </div>
               </div>
             </div>
             <div class="card-body">
@@ -148,10 +163,15 @@
           <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
-                <div id="chartFieldSampleCountEmpty" class="mb-0 ">
-                  <div class="chart">
-                    <canvas id="chartFieldSampleCount" data-url="{%url 'chart_fieldsamplecount' %}" class="chart-canvas" height="250"></canvas>
+                <div class="chart">
+                  <div id="chartFieldSampleCountLoading" class="d-flex justify-content-center">
+                    <button class="btn btn-primary" type="button" disabled>
+                      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                      Chart Loading...
+                    </button>
                   </div>
+                  <h6 id="chartFieldSampleCountEmpty" class="mb-4 mt-4 text-center"></h6>
+                  <canvas id="chartFieldSampleCount" data-url="{%url 'chart_fieldsamplecount' %}" class="chart-canvas" height="250"></canvas>
                 </div>
               </div>
             </div>
@@ -168,11 +188,16 @@
           <div class="bg-gray-200 card z-index-2 ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
-                <div id="chartFilterTypeCountEmpty" class="mb-0 ">
                   <div class="chart">
+                    <div id="chartFilterTypeCountLoading" class="d-flex justify-content-center">
+                      <button class="btn btn-primary" type="button" disabled>
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                        Chart Loading...
+                      </button>
+                    </div>
+                    <h6 id="chartFilterTypeCountEmpty" class="mb-4 mt-4 text-center"></h6>
                     <canvas id="chartFilterTypeCount" data-url="{% url 'chart_filtertypecount' %}" class="chart-canvas" height="250"></canvas>
                   </div>
-                </div>
               </div>
             </div>
             <div class="card-body">
@@ -186,10 +211,15 @@
           <div class="bg-gray-200 card z-index-2  ">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
-                <div id="chartFilterSystemCountEmpty" class="mb-0 ">
-                  <div class="chart">
-                    <canvas id="chartFilterSystemCount" data-url="{% url 'chart_filtersystemcount' %}" class="chart-canvas" height="250"></canvas>
+                <div class="chart">
+                  <div id="chartFilterSystemCountLoading" class="d-flex justify-content-center">
+                    <button class="btn btn-primary" type="button" disabled>
+                      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                      Chart Loading...
+                    </button>
                   </div>
+                  <h6 id="chartFilterSystemCountEmpty" class="mb-4 mt-4 text-center"></h6>
+                  <canvas id="chartFilterSystemCount" data-url="{% url 'chart_filtersystemcount' %}" class="chart-canvas" height="250"></canvas>
                 </div>
               </div>
             </div>
@@ -206,10 +236,15 @@
           <div class="card-body p-3">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
-                <div id="chartFilterSiteCountEmpty" class="mb-0 ">
-                  <div class="chart">
-                    <canvas id="chartFilterSiteCount" data-url="{%url 'chart_filtersitecount' %}" class="chart-canvas" height="250"></canvas>
+                <div class="chart">
+                  <div id="chartFilterSiteCountLoading" class="d-flex justify-content-center">
+                    <button class="btn btn-primary" type="button" disabled>
+                      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                      Chart Loading...
+                    </button>
                   </div>
+                  <h6 id="chartFilterSiteCountEmpty" class="mb-4 mt-4 text-center"></h6>
+                  <canvas id="chartFilterSiteCount" data-url="{%url 'chart_filtersitecount' %}" class="chart-canvas" height="250"></canvas>
                 </div>
               </div>
             </div>
