updated chart spinner margins

--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -89,7 +89,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                   <div class="chart">
-                    <div id="chartSurveyCountLoading" class="d-flex justify-content-center">
+                    <div id="chartSurveyCountLoading" class="d-flex justify-content-center mb-4 mt-4">
                       <button class="btn btn-primary" type="button" disabled>
                         <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                         Chart Loading...
@@ -112,7 +112,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <div id="chartSurveySystemCountLoading" class="d-flex justify-content-center">
+                  <div id="chartSurveySystemCountLoading" class="d-flex justify-content-center mb-4 mt-4">
                     <button class="btn btn-primary" type="button" disabled>
                       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                       Chart Loading...
@@ -137,7 +137,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                   <div class="chart">
-                    <div id="chartSurveySiteCountLoading" class="d-flex justify-content-center">
+                    <div id="chartSurveySiteCountLoading" class="d-flex justify-content-center mb-4 mt-4">
                       <button class="btn btn-primary" type="button" disabled>
                         <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                         Chart Loading...
@@ -164,7 +164,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <div id="chartFieldSampleCountLoading" class="d-flex justify-content-center">
+                  <div id="chartFieldSampleCountLoading" class="d-flex justify-content-center mb-4 mt-4">
                     <button class="btn btn-primary" type="button" disabled>
                       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                       Chart Loading...
@@ -189,7 +189,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                   <div class="chart">
-                    <div id="chartFilterTypeCountLoading" class="d-flex justify-content-center">
+                    <div id="chartFilterTypeCountLoading" class="d-flex justify-content-center mb-4 mt-4">
                       <button class="btn btn-primary" type="button" disabled>
                         <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                         Chart Loading...
@@ -212,7 +212,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <div id="chartFilterSystemCountLoading" class="d-flex justify-content-center">
+                  <div id="chartFilterSystemCountLoading" class="d-flex justify-content-center mb-4 mt-4">
                     <button class="btn btn-primary" type="button" disabled>
                       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                       Chart Loading...
@@ -237,7 +237,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                 <div class="chart">
-                  <div id="chartFilterSiteCountLoading" class="d-flex justify-content-center">
+                  <div id="chartFilterSiteCountLoading" class="d-flex justify-content-center mb-4 mt-4">
                     <button class="btn btn-primary" type="button" disabled>
                       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                       Chart Loading...
@@ -264,7 +264,7 @@
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
               <div class="shadow-dark border-radius-lg py-3 pe-1">
                   <div class="chart">
-                    <div id="chartExtractionCountLoading" class="d-flex justify-content-center">
+                    <div id="chartExtractionCountLoading" class="d-flex justify-content-center mb-4 mt-4">
                       <button class="btn btn-primary" type="button" disabled>
                         <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                         Chart Loading...
