--- a/frontend/templates/home/django-material-dashboard/index.html
+++ b/frontend/templates/home/django-material-dashboard/index.html
@@ -23,7 +23,7 @@
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3">
-              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+5% </span>than yesterday</p>
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">Last Survey: </span><span id="lastSurveyDate"></span></p>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3">
-              <p class="mb-0"><span class="text-danger text-sm font-weight-bolder">-2%</span> than yesterday</p>
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">Last Extraction: </span><span id="lastExtractionDate"></span></p>
             </div>
           </div>
         </div>
@@ -77,7 +77,7 @@
             </div>
             <hr class="dark horizontal my-0">
             <div class="card-footer p-3">
-              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+5% </span>than yesterday</p>
+              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">Last Run: </span><span id="lastRunResultDate"></span></p>
             </div>
           </div>
         </div>
@@ -303,8 +303,8 @@
               </div>
             </div>
             <div class="card-body">
-              <h6 class="mb-0 "> Monthly Extractions </h6>
-              <p class="text-sm "> Extractions per month. </p>
+              <h6 class="mb-0 "> Monthly Run Results </h6>
+              <p class="text-sm "> Runs per month. </p>
               <hr class="dark horizontal">
             </div>
           </div>
