updated frontend dashboard tables

--- a/frontend/templates/home/django-material-dashboard/field-add.html
+++ b/frontend/templates/home/django-material-dashboard/field-add.html
@@ -43,7 +43,7 @@
              {% endfor %}
            </div>
             <div class="col-md-6 text-end ms-auto">
-              <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Update</button>
+              <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Add</button>
             </div>
           </div>
         </form>
