--- a/frontend/templates/home/django-material-dashboard/field-update.html
+++ b/frontend/templates/home/django-material-dashboard/field-update.html
@@ -8,14 +8,13 @@
 
 {% block content %}
 
-    <div class="container-fluid px-2 px-md-4">
-      <div class="page-header min-height-300 border-radius-xl mt-4" 
+  <div class="container-fluid py-4">
+    <div class="page-header min-height-300 border-radius-xl mt-4"
            style="background-image: url('https://images.unsplash.com/photo-1533084417605-e538a510d50a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80');">
         <span class="mask bg-gradient-dark opacity-6"></span>
-      </div>
+    </div>
 
-     <div class="card card-body mx-3 mx-md-4 mt-n6">
-
+    <div class="card card-body mx-3 mx-md-4 mt-n6">
       <div class="row min-vh-80 h-100">
         <div class="col-12">
           <h3 class="text-center">Update {{ page_title|title }}</h3>
@@ -37,7 +36,7 @@
                <div class="input-group input-group-static mb-4">
                 {{ field }}
                 {% if field.help_text %}
-                 <p class="help">{{ field.help_text|safe }}</p>
+                 <div class="alert alert-primary text-white font-weight-bold" role="alert">{{ field.help_text|safe }}</div>
                 {% endif %}
                </div>
              </div>
@@ -50,8 +49,11 @@
         </form>
         <!-- END FORM -->
       </div>
-     </div>
+    </div>
+
+
     {% include 'includes/django-material-dashboard/footer.html' %}
+
   </div>
 
 {% endblock content %}
