updated frontend templates

--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -27,7 +27,7 @@
           </li>
             {% if perms.field_site.view_fieldsite %}
             <li class="nav-item">
-              <a class="nav-link text-white {% if 'view_fieldsite' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'view_fieldsite' %}">
+              <a class="nav-link text-white {% if 'view_fieldsite' in segment or 'detail_fieldsite' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'view_fieldsite' %}">
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">table_view</i>
                 </div>
@@ -56,7 +56,7 @@
         </li>
         {% if perms.sample_label.view_samplelabelrequest %}
          <li class="nav-item">
-          <a class="nav-link text-white {% if 'view_samplelabelrequest' in segment %} active bg-gradient-primary {% endif %}"
+          <a class="nav-link text-white {% if 'view_samplelabelrequest' in segment or 'detail_samplelabelrequest' in segment %} active bg-gradient-primary {% endif %}"
              href="{% url 'view_samplelabelrequest' %}">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">table_view</i>
