--- a/frontend/templates/home/django-material-dashboard/profile-update.html
+++ b/frontend/templates/home/django-material-dashboard/profile-update.html
@@ -29,23 +29,25 @@
         <form method="post" class="p-3" id="contact-form" >
           {% csrf_token %}
           <div class="card-body pt-1">
+              {% for field in form %}
            <div class="row">
-             {% for field in form %}
              <div class="col-md-12 pe-2 mb-3">
                {{ field.errors }}
                {{ field.label_tag }}
-               <div class="input-group input-group-static mb-4">
+               <div class="input-group input-group-outline mb-4">
                 {{ field }}
                 {% if field.help_text %}
                  <p class="help">{{ field.help_text|safe }}</p>
                 {% endif %}
                </div>
              </div>
-             {% endfor %}
            </div>
+              {% endfor %}
+              <div class="row">
             <div class="col-md-6 text-end ms-auto">
               <button type="submit" value="Submit" class="btn bg-gradient-dark w-100">Update</button>
             </div>
+              </div>
           </div>
         </form>
         <!-- END FORM -->
