--- a/frontend/templates/includes/django-material-dashboard/form.html
+++ b/frontend/templates/includes/django-material-dashboard/form.html
@@ -14,10 +14,12 @@
        {{ field.label_tag }}
        <div class="input-group input-group-outline my-3">
         {{ field }}
-        {% if field.help_text %}
-         <p class="help">{{ field.help_text|safe }}</p>
-        {% endif %}
        </div>
+       {% if field.help_text %}
+       <div class="row">
+           <p class="help">{{ field.help_text|safe }}</p>
+       </div>
+       {% endif %}
    </div>
       {% endfor %}
       <div class="row">
