--- a/frontend/templates/custom_forms/widgets/clearable_file_input.html
+++ b/frontend/templates/custom_forms/widgets/clearable_file_input.html
@@ -1,26 +1,22 @@
 {% if widget.is_initial %}
 <div class="row">
-    <div class="col-4">{{ widget.initial_text }}:</div>
-    <div class="col-8"><a href="{{ widget.value.url }}">{{ widget.value }}</a></div>
+    <div class="col-12">{{ widget.initial_text }}:</div>
 </div>
+<div class="page-break"></div>
 {% if not widget.required %}
 <div class="row">
-    <div class="col-12">
+    <div class="col-4"><a href="{{ widget.value.url }}">{{ widget.value }}</a></div>
+    <div class="col-8">
         <div class="form-check">
             <input class="form-check-input" type="checkbox" name="{{ widget.checkbox_name }}" id="{{ widget.checkbox_id }}"{% if widget.attrs.disabled %} disabled{% endif %}>
             <label class="custom-control-label" for="{{ widget.checkbox_id }}">{{ widget.clear_checkbox_label }}</label>
         </div>
     </div>
 </div>
+<div class="page-break"></div>
 {% endif %}
-<div class="row">
-    <div class="col-12">
-        {{ widget.input_text }}:
-    </div>
-</div>
-    {% endif %}
-<div class="row">
-    <div class="col-12">
-        <input type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
-    </div>
-</div>
+{{ widget.input_text }}:
+<div class="page-break"></div>
+{% endif %}
+<input type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
+
