--- a/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
+++ b/frontend/templates/layouts/django-material-dashboard/base-fullscreen.html
@@ -36,7 +36,9 @@
   <!-- CSS Files -->
   <link id="pagestyle" href="{% static 'assets/css/material-dashboard.css' %}" rel="stylesheet" />
 
-  {% block stylesheets %}{% endblock stylesheets %}
+  {% block stylesheets %}
+    <link href="{% static 'assets/css/custom.css' %}" rel="stylesheet" />
+  {% endblock stylesheets %}
 
 </head>
 <body class="bg-gray-200">
