updated clearable_file_input template

--- a/frontend/templates/layouts/django-material-dashboard/base.html
+++ b/frontend/templates/layouts/django-material-dashboard/base.html
@@ -37,7 +37,7 @@
   <link id="pagestyle" href="{% static 'assets/css/material-dashboard.css' %}" rel="stylesheet" />
 
   {% block stylesheets %}
-    <link href="{% static 'assets/css/custom.css' %}" rel="stylesheet" />
+    <link href="{% static 'assets/css/custom-dashboard.css' %}" rel="stylesheet" />
   {% endblock stylesheets %}
 
 </head> 
