--- a/frontend/templates/home/django-material-kit/about-us.html
+++ b/frontend/templates/home/django-material-kit/about-us.html
@@ -223,7 +223,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="https://umaine.edu/marine/people/geneva-york/">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/image/geneva-sq.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'assets/img/geneva-sq.jpg' %}" alt="image">
                     </div>
                   </a>
                 </div>
