rearranged dashboard sidebar items

--- a/frontend/templates/home/django-material-kit/account-expired.html
+++ b/frontend/templates/home/django-material-kit/account-expired.html
@@ -34,7 +34,7 @@
                   Your account is expired. Please contact an administrator to re-activate your account.
                   <br />
                   <br />
-                  <a href="/" class="text-primary text-gradient font-weight-bold">HOME</a>
+                  <a href="{% url 'home' %}" class="text-primary text-gradient font-weight-bold">HOME</a>
                 </p>
               </form>
             </div>
