--- a/frontend/templates/includes/django-material-dashboard/navigation-transparent.html
+++ b/frontend/templates/includes/django-material-dashboard/navigation-transparent.html
@@ -23,7 +23,7 @@
           </li>
           {% endif %}
           <li class="nav-item my-auto ms-3 ms-lg-0">
-            <a href="/" target="_blank" class="btn btn-sm  bg-white  mb-0 me-1 mt-2 mt-md-0">Main</a>
+            <a href="{% url 'home' %}" target="_blank" class="btn btn-sm  bg-white  mb-0 me-1 mt-2 mt-md-0">Main</a>
           </li>
           {% if request.user.is_authenticated %}
           <li class="nav-item ms-lg-auto">
