--- a/frontend/templates/home/django-material-kit/page-404.html
+++ b/frontend/templates/home/django-material-kit/page-404.html
@@ -34,7 +34,7 @@
                   If the problem persists, please contact support.
                   <br />
                   <br />
-                  <a href="/" class="text-primary text-gradient font-weight-bold">HOME</a>
+                  <a href="{% url 'home' %}" class="text-primary text-gradient font-weight-bold">HOME</a>
                 </p>
               </form>
             </div>
