--- a/frontend/templates/home/django-material-kit/ui-navigation-navbars.html
+++ b/frontend/templates/home/django-material-kit/ui-navigation-navbars.html
@@ -91,7 +91,7 @@
 <nav
   class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3">
   <div class="container">
-    <a class="navbar-brand text-white" href="/" rel="tooltip" title="Designed and Coded by the Maine-eDNA Data Management Team" data-placement="bottom" target="_blank">
+    <a class="navbar-brand text-white" href="{% url 'home' %}" rel="tooltip" title="Designed and Coded by the Maine-eDNA Data Management Team" data-placement="bottom" target="_blank">
       Material Kit 2
     </a>
     <a href="https://www.creative-tim.com/product/material-design-system-pro#pricingCard" class="btn btn-sm  bg-gradient-primary  btn-round mb-0 ms-auto d-lg-none d-block">Buy Now</a>
