--- a/frontend/templates/includes/django-material-dashboard/navigation-fullscreen.html
+++ b/frontend/templates/includes/django-material-dashboard/navigation-fullscreen.html
@@ -27,7 +27,7 @@
               <ul class="navbar-nav d-lg-block d-none">
                 <li class="nav-item">
                   <a target="_blank"
-                     href="/"
+                     href="{% url 'home' %}"
                      class="btn btn-sm mb-0 me-1 bg-gradient-dark">Main</a>
                 </li>
               </ul>
