--- a/frontend/templates/includes/django-material-kit/navigation-light.html
+++ b/frontend/templates/includes/django-material-kit/navigation-light.html
@@ -2,7 +2,7 @@
   <!-- Navbar Light -->
   <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
     <div class="container">
-      <a class="navbar-brand" href="/" rel="tooltip" title="Designed and Coded by the Maine-eDNA Data Management Team" data-placement="bottom">
+      <a class="navbar-brand" href="{% url 'home' %}" rel="tooltip" title="Designed and Coded by the Maine-eDNA Data Management Team" data-placement="bottom">
         Maine-eDNA Metadata
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
