--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -80,7 +80,7 @@
       </ul>
     </div>
     <div class="sidenav-footer position-absolute w-100 bottom-0 ">
-      <li class="nav-item">
+      <div class="nav-item">
         <a class="nav-link text-white {% if 'detail_dashboardprofile' in segment or 'update_dashboardprofile' in segment %} active bg-gradient-primary {% endif %}"
            href="{% url 'detail_dashboardprofile' %}">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
@@ -88,25 +88,25 @@
           </div>
           <span class="nav-link-text ms-1">Profile</span>
         </a>
-      </li>
+      </div>
       {% if user.is_active and user.is_staff %}
-      <li class="nav-item">
+      <div class="nav-item">
         <a class="nav-link text-white {% if 'admin' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'admin:index' %}">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">admin_panel_settings</i>
           </div>
           <span class="nav-link-text ms-1">Admin</span>
         </a>
-      </li>
+      </div>
       {% endif %}
-      <li class="nav-item">
+      <div class="nav-item">
         <a class="nav-link text-white " href="{% url 'logout' %}">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">directions_run</i>
           </div>
           <span class="nav-link-text ms-1">Logout</span>
         </a>
-      </li>
+      </div>
       <div class="mx-3">
         <a class="btn bg-gradient-primary mt-4 w-100" 
            target="_blank" 
