--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -9,7 +9,7 @@
       </a>
     </div>
     <hr class="horizontal light mt-0 mb-2">
-    <div class="collapse navbar-collapse  w-auto  max-height-vh-100" id="sidenav-collapse-main">
+    <div class="collapse navbar-collapse w-auto max-height-vh-100" id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link text-white {% if 'index' in segment %} active bg-gradient-primary {% endif %}" 
@@ -77,41 +77,38 @@
       </ul>
     </div>
     <div class="sidenav-footer position-absolute w-100 bottom-0 ">
-            <ul class="navbar-nav">
+      <ul class="navbar-nav">
         <li class="nav-item">
-
-        <a class="nav-link text-white {% if 'detail_dashboardprofile' in segment or 'update_dashboardprofile' in segment %} active bg-gradient-primary {% endif %}"
+          <a class="nav-link text-white {% if 'detail_dashboardprofile' in segment or 'update_dashboardprofile' in segment %} active bg-gradient-primary {% endif %}"
            href="{% url 'detail_dashboardprofile' %}">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">person</i>
-          </div>
-          <span class="nav-link-text ms-1">Profile</span>
-        </a>
-      </li>
-      {% if user.is_active and user.is_staff %}
-      <li class="nav-item">
-        <a class="nav-link text-white {% if 'admin' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'admin:index' %}">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">admin_panel_settings</i>
-          </div>
-          <span class="nav-link-text ms-1">Admin</span>
-        </a>
-      </li>
-      {% endif %}
-      <li class="nav-item">
-        <a class="nav-link text-white " href="{% url 'logout' %}">
-          <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
-            <i class="material-icons opacity-10">directions_run</i>
-          </div>
-          <span class="nav-link-text ms-1">Logout</span>
-        </a>
-      </li>
-              </ul>
+            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="material-icons opacity-10">person</i>
+            </div>
+            <span class="nav-link-text ms-1">Profile</span>
+          </a>
+        </li>
+        {% if user.is_active and user.is_staff %}
+        <li class="nav-item">
+          <a class="nav-link text-white {% if 'admin' in segment %} active bg-gradient-primary {% endif %}" href="{% url 'admin:index' %}">
+            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="material-icons opacity-10">admin_panel_settings</i>
+            </div>
+            <span class="nav-link-text ms-1">Admin</span>
+          </a>
+        </li>
+        {% endif %}
+        <li class="nav-item">
+          <a class="nav-link text-white " href="{% url 'logout' %}">
+            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="material-icons opacity-10">directions_run</i>
+            </div>
+            <span class="nav-link-text ms-1">Logout</span>
+          </a>
+        </li>
+      </ul>
       <div class="mx-3">
-        <a class="btn bg-gradient-primary mt-4 w-100" 
-           target="_blank" 
-           href="{% url 'home' %}" type="button">Main</a>
+        <a class="btn bg-gradient-primary mt-4 w-100" target="_blank" href="{% url 'home' %}" type="button">Main</a>
       </div>
     </div>
-  </aside>
+</aside>
   
