updated sidebar style

--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -76,6 +76,7 @@
         {% endif %}
       </ul>
     </div>
+  <hr class="horizontal light mt-0 mb-2">
     <div class="sidenav-footer position-absolute w-100 bottom-0 ">
       <ul class="navbar-nav">
         <li class="nav-item">
