--- a/frontend/templates/includes/django-material-dashboard/navigation-fullscreen.html
+++ b/frontend/templates/includes/django-material-dashboard/navigation-fullscreen.html
@@ -5,7 +5,7 @@
       <div class="col-12">
         <nav class="navbar navbar-expand-lg blur border-radius-lg top-0 z-index-3 shadow position-absolute mt-4 py-2 start-0 end-0 mx-4">
           <div class="container-fluid ps-2 pe-0">
-            <a class="navbar-brand font-weight-bolder ms-sm-3" href="/dashboard/" rel="tooltip" title="Designed and Coded by the Maine-eDNA Data Management Team" data-placement="bottom">
+            <a class="navbar-brand font-weight-bolder ms-sm-3" href="{% url 'dashboard' %}" rel="tooltip" title="Designed and Coded by the Maine-eDNA Data Management Team" data-placement="bottom">
               Maine-eDNA Metadata
             </a>
             <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
