--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -3,7 +3,7 @@
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" 
-         href="/dashboard/" target="_blank">
+         href="{% url 'dashboard' %}" target="_blank">
         <img src="{% static 'assets/img/logo-medna-light.png' %}" class="navbar-brand-img h-100" alt="main_logo">
         <span class="ms-1 font-weight-bold text-white">Metadata Dashboard</span>
       </a>
@@ -12,16 +12,18 @@
     <div class="collapse navbar-collapse w-auto max-height-vh-100" id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-white {% if 'index' in segment %} active bg-gradient-primary {% endif %}" 
-             href="/dashboard/">
+          <a class="nav-link text-white {% if 'index' in segment %} active bg-gradient-primary {% endif %}"
+             href="{% url 'dashboard' %}">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">dashboard</i>
             </div>
             <span class="nav-link-text ms-1">Dashboard</span>
           </a>
         </li>
+      </ul>
         {% if perms.field_site %}
           <!-- begin field site -->
+      <ul class="nav nav-pills nav-fill p-1" role="tablist">
           <li class="nav-item mt-3">
             <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Field Sites</h6>
           </li>
@@ -45,9 +47,11 @@
               </a>
             </li>
             {% endif %}
+      </ul>
         <!-- end field site -->
         {% endif %}
         {% if perms.sample_label %}
+      <ul class="navbar-nav">
         <li class="nav-item mt-3">
           <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Sample Labels</h6>
         </li>
@@ -73,8 +77,9 @@
           </a>
         </li>
         {% endif %}
+        </ul>
         {% endif %}
-      </ul>
+
     </div>
   <hr class="horizontal light mt-0 mb-2">
     <div class="sidenav-footer position-absolute w-100 bottom-0 ">
