--- a/frontend/templates/includes/django-material-kit/navigation.html
+++ b/frontend/templates/includes/django-material-kit/navigation.html
@@ -212,7 +212,7 @@
 
                 {% if request.user.is_authenticated %}
                 <li class="nav-item my-auto ms-3 ms-lg-0">
-                  <a href="/dashboard/" target="_blank" class="btn btn-sm  bg-gradient-primary  mb-0 me-1 mt-2 mt-md-0">Dashboard</a>
+                  <a href="{% url 'dashboard' %}" target="_blank" class="btn btn-sm  bg-gradient-primary  mb-0 me-1 mt-2 mt-md-0">Dashboard</a>
                 </li>
                 <li class="nav-item ms-lg-auto">
                   <a class="nav-link nav-link-icon me-2"
