updated sidebar style

--- a/frontend/templates/includes/django-material-dashboard/sidebar.html
+++ b/frontend/templates/includes/django-material-dashboard/sidebar.html
@@ -34,7 +34,7 @@
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">table_view</i>
                 </div>
-                <span class="nav-link-text ms-1">View</span>
+                <span class="nav-link-text text-center ms-1">View</span>
               </a>
             </li>
             {% endif %}
@@ -44,7 +44,7 @@
                 <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                   <i class="material-icons opacity-10">add_box</i>
                 </div>
-                <span class="nav-link-text ms-1">Add</span>
+                <span class="nav-link-text text-center ms-1">Add</span>
               </a>
             </li>
             {% endif %}
